manifests/hidmo-systemtest/backend/patches/external-service-spring-profile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-service
spec:
  template:
    spec:
      containers:
      - name: external-service
