manifests/hidmo-systemtest/backend/patches/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hidmo-backend
spec:
  rules:
    - host: api-hidmo-systemtest.leultewolde.com
